# SchoolDaysCounter

./: .gitignore  CMakeLists.txt  README.md  build.cmd  sdc_config.json
src/: config.h  config_parser.cpp  extwinapi.cpp  extwinapi.h  main.cpp  pch.h  resource.h  resource.rc  timer.cpp  timer.h  util.cpp  util.h
